# patternate

./: .gitignore  CONTRIBUTING.md  Cargo.toml  package.json
.agents/skills/create-feature/: SKILL.md
.claude/skills/: create-feature
.github/: PULL_REQUEST_TEMPLATE.md
apps/tauri/src-tauri/: Cargo.toml  tauri.conf.json
apps/tauri/src-tauri/capabilities/: default.json
apps/tauri/src-tauri/src/: lib.rs  main.rs
apps/web/: .gitignore  index.html  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.app.tsbuildinfo  vite.config.ts
apps/web/src/: App.tsx  main.tsx
apps/web/src/edit/: splinePath.ts
assets/refboard_v1/: README.md  refboard_v1.json
examples/calibration-profiles/: identity.json
examples/photos/: shadow_dark_panel.HEIC
examples/photos/synthetic_pattern_set/: README.md  curved.json  dark_on_light.json  light_on_dark.json  manifest.json  multi_lighting.json  near_occluder.json  notched.json  rotated_board.json
implementation-plans/: create-feature-skill.md  rectified-viewport-fit.md  simplify-defaults-and-tab-close.md  v1.md
rectify-cli/: Cargo.toml
rectify-cli/src/: main.rs
rectify-core/: Cargo.toml
rectify-core/src/: board_detect.rs  board_spec.rs  calibration.rs  contour.rs  grid_detect.rs  homography.rs  image_io.rs  lib.rs  metadata.rs  pipeline.rs  quality.rs  segment.rs  simplify.rs  undistort.rs  vector_export.rs  warp.rs
rectify-core/tests/: outline_integration.rs
rectify-wasm/: Cargo.toml
rectify-wasm/src/: lib.rs
scripts/: detect_refboard.py  generate_refboard_v1.py  generate_synthetic_pattern_set.py  generate_synthetic_refboard_scene.py  validate_synthetic_pattern_set.py
(+62 files in other folders)
