[package]
name = "rectify-core"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
image = "0.25"
imageproc = "0.25"
kamadak-exif = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
nalgebra = "0.34"
calib-targets = { version = "0.5", features = ["image"] }
calib-targets-charuco = "0.5"
calib-targets-aruco = "0.5"
